--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pcap = "*"
-etherparse = "*"
+pcap = "0.7.0"
+etherparse = "0.9.0"
+byteorder = "1.3.4"
