--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 authors = ["Eric Mikulin <ericm99@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-pcap = "0.7.0"
-etherparse = "0.9.0"
 byteorder = "1.3.4"
+etherparse = "0.9.0"
+pcap = "0.7.0"
 rustls = "0.17.0"
+webpki-roots = "0.19.0"
+webpki = "0.21.3"
