--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2018"
 
 [dependencies]
 byteorder = "1.3.4"
+clap = "2.33.1"
 etherparse = "0.9.0"
 pcap = "0.7.0"
 rustls = "0.17.0"
-webpki-roots = "0.19.0"
 webpki = "0.21.3"
+webpki-roots = "0.19.0"
