--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Dependencies
-      run: sudo apt-get update -y && sudo apt-get install libpcap-dev
+      run: sudo apt-get update -y && sudo apt-get install -y libpcap-dev
 
     - name: Build
       run: cargo build --verbose
