--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 byteorder = "1.3.4"
 clap = "2.33.1"
+crossbeam = "0.7.3"
 etherparse = "0.9.0"
 pcap = "0.7.0"
 rustls = "0.17.0"
