--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "ovenrack"
-version = "0.1.0"
+version = "2.0.0"
 authors = ["Eric Mikulin <ericm99@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
-byteorder = "1.3.4"
-clap = "2.33.1"
-crossbeam = "0.7.3"
-etherparse = "0.9.0"
-pcap = "0.7.0"
-rustls = "0.17.0"
-webpki = "0.21.3"
-webpki-roots = "0.19.0"
+anyhow = "1.0"
+byteorder = "1.4"
+chrono = "0.4"
+clap = { version = "3.2", features = ["cargo"] }
+log = "0.4"
+reqwest = { version = "0.11", features = ["blocking"] }
+rustls = "0.20"
+simplelog = "0.12.1"
+webpki-roots = "0.22"
