--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 
 [dependencies]
 byteorder = "1.4"
-chrono = "0.4"
-clap = { version = "4.2", features = ["cargo"] }
+clap = { version = "4.3", features = ["cargo"] }
 log = "0.4"
 reqwest = { version = "0.11", features = ["blocking"] }
 rustls = "0.21"
 simplelog = "0.12"
-webpki-roots = "0.23"
+time = "0.3"
+webpki-roots = "0.24"
